2006-10-11 commented out all default values in matplotlibrc.template
           Default values should generally be taken from defaultParam in
	   __init__.py - the file matplotlib should only contain those values
	   that the user wants to explicitely change from the default.
           (see thread "marker color handling" on matplotlib-devel)

2006-10-10 Changed default comment character for load to '#' - JDH

2006-10-10 deactivated rcfile-configurability of markerfacecolor
           and markeredgecolor. Both are now hardcoded to the special value
	   'auto' to follow the line color. Configurability at run-time
	   (using function arguments) remains functional. - NN

2006-10-07 introduced dummy argument magnification=1.0 to
           FigImage.make_image to satisfy unit test figimage_demo.py
           The argument is not yet handled correctly, which should only
	   show up when using non-standard DPI settings in PS backend,
	   introduced by patch #1562394. - NN

2006-10-06 add backend-agnostic example: simple3d.py - NN

2006-09-29 fix line-breaking for SVG-inline images (purely cosmetic) - NN

2006-09-29 reworked set_linestyle and set_marker
	   markeredgecolor and markerfacecolor now default to
	   a special value "auto" that keeps the color in sync with
	   the line color
	   further, the intelligence of axes.plot is cleaned up,
	   improved and simplified. Complete compatibility cannot be
	   guaranteed, but the new behavior should be much more predictable
	   (see patch #1104615 for details) - NN

2006-09-29 changed implementation of clip-path in SVG to work around a
           limitation in inkscape - NN

2006-09-29 added two options to matplotlibrc:
	   svg.image_inline
	   svg.image_noscale
	   see patch #1533010 for details - NN

2006-09-29 axes.py: cleaned up kwargs checking - NN

2006-09-29 setup.py: cleaned up setup logic - NN

2006-09-29 setup.py: check for required pygtk versions, fixes bug #1460783 - SC
